--- a/meet-landing-page/scss/base/_reset.scss
+++ b/meet-landing-page/scss/base/_reset.scss
@@ -1,9 +1,7 @@
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* Remove list styles */
@@ -14,17 +12,21 @@ ol {
 
 /* Set core root defaults */
 html {
-    font-size: 62.5%;
-    scroll-behavior: smooth;
-    -webkit-text-size-adjust: none;
+  font-size: 100%;
+  scroll-behavior: smooth;
+  -webkit-text-size-adjust: none;
 }
 
 /* Set core body defaults */
 body {
-    font-size: 1.6rem;
-    line-height: 1.5;
-    text-rendering: optimizeSpeed;
-    -webkit-font-smoothing: antialiased;
+  font-family: $font-family-primary;
+  background-color: $color-white;
+  color: $color-slate-900;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  -webkit-font-smoothing: antialiased;
 }
 
 /* Make images easier to work with */
@@ -33,9 +35,9 @@ picture,
 video,
 canvas,
 svg {
-    max-width: 100%;
-    height: auto;
-    display: block;
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 /* Remove built-in form typography styles */
@@ -43,15 +45,15 @@ input,
 button,
 textarea,
 select {
-    font: inherit;
+  font: inherit;
 }
 
 /* Remove all button styles */
 button {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
 /* Remove all animations and transitions for people that prefer not to see them */
@@ -68,6 +70,6 @@ button {
 
 /* Remove text-decoration from links */
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
