--- a/meet-landing-page/scss/abstracts/_variables.scss
+++ b/meet-landing-page/scss/abstracts/_variables.scss
@@ -37,6 +37,7 @@ $spacing-1000: 80px;
 $spacing-900: 72px;
 $spacing-800: 64px;
 $spacing-700: 56px;
+$spacing-600: 48px;
 $spacing-500: 40px;
 $spacing-400: 32px;
 $spacing-300: 24px;
