--- a/meet-landing-page/scss/base/_typography.scss
+++ b/meet-landing-page/scss/base/_typography.scss
@@ -1,9 +1,8 @@
 // Base typography styles
 body {
-  font-family: $font-family-primary;
-  font-size: $font-size-5;
-  font-weight: $font-weight-medium;
-  line-height: $line-height-150;
+  font-family: 'Red Hat Display', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
   color: $color-slate-900;
 }
 
@@ -12,46 +11,51 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: $font-weight-black;
 }
 
-// Text preset styles
+// Text presets from style guide
 .text-preset {
+  font-family: 'Red Hat Display', sans-serif;
+
   &-1 {
-    font-size: $font-size-1;
-    line-height: $line-height-110;
-    letter-spacing: $letter-spacing-0;
+    font-weight: 900; // Black
+    font-size: 64px;
+    line-height: 110%;
+    letter-spacing: 0;
   }
 
   &-2 {
-    font-size: $font-size-2;
-    line-height: $line-height-110;
-    letter-spacing: $letter-spacing-0;
+    font-weight: 900; // Black
+    font-size: 40px;
+    line-height: 110%;
+    letter-spacing: 0;
   }
 
   &-3 {
-    font-size: $font-size-3;
-    line-height: $line-height-110;
-    letter-spacing: $letter-spacing-4;
+    font-weight: 900; // Black
+    font-size: 16px;
+    line-height: 110%;
+    letter-spacing: 4px;
     text-transform: uppercase;
   }
 
   &-4 {
-    font-size: $font-size-4;
-    line-height: $line-height-170;
-    letter-spacing: $letter-spacing-0;
-    font-weight: $font-weight-medium;
+    font-weight: 500; // Medium
+    font-size: 18px;
+    line-height: 170%;
+    letter-spacing: 0;
   }
 
   &-5 {
-    font-size: $font-size-5;
-    line-height: $line-height-150;
-    letter-spacing: $letter-spacing-0;
-    font-weight: $font-weight-black;
+    font-weight: 900; // Black
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0;
   }
 }
 
-// Responsive typography
+// Responsive adjustments
 @include respond-to(mobile) {
   .text-preset-1 {
-    font-size: $font-size-2;
+    font-size: 40px;
   }
   
   .text-preset-2 {
