--- a/meet-landing-page/scss/components/_buttons.scss
+++ b/meet-landing-page/scss/components/_buttons.scss
@@ -1,6 +1,15 @@
 .button {
   @include button-base;
   display: inline-block;
+  font-family: 'Red Hat Display';
+  font-weight: 500; // Medium weight
+  font-size: 16px;
+  padding: 16px 32px;
+  border-radius: 24px;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 
   &--primary {
     background-color: $color-cyan-600;
@@ -29,7 +38,7 @@
   }
 
   &__version {
-    color: $color-cyan-300;
+    color: rgba($color-white, 0.75);
 
     .button--light & {
       color: $color-purple-300;
