--- a/meet-landing-page/scss/layouts/_footer.scss
+++ b/meet-landing-page/scss/layouts/_footer.scss
@@ -1,7 +1,67 @@
 .footer {
-  padding: $spacing-500 0;
+  position: relative;
+  color: $color-white;
+  overflow: hidden;
+
+  &__background {
+    position: absolute;
+    inset: 0;
+    z-index: 0;
+    
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &__overlay {
+    position: absolute;
+    inset: 0;
+    background-color: rgba($color-slate-900, 0.8);
+  }
 
   .container {
+    position: relative;
+    z-index: 1;
     @include container;
+  }
+
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: $spacing-400;
+    align-items: center;
+    padding: $spacing-800 0;
+    max-width: 1110px;
+    margin: 0 auto;
+
+    @include respond-to(tablet) {
+      grid-template-columns: 1fr;
+      text-align: center;
+      gap: $spacing-300;
+      padding: $spacing-600 $spacing-300;
+    }
+  }
+
+  &__title {
+    @include heading-2;
+
+    @include respond-to(tablet) {
+      margin-bottom: $spacing-300;
+    }
+  }
+
+  &__description {
+    font-size: $font-size-4;
+  }
+
+  &__cta {
+    justify-self: end;
+
+    @include respond-to(tablet) {
+      justify-self: center;
+      margin-top: $spacing-300;
+    }
   }
 }
