refactor(styles): ♻️ migrate to use syntax for SCSS imports

--- a/meet-landing-page/scss/style.scss
+++ b/meet-landing-page/scss/style.scss
@@ -1,12 +1,12 @@
-@import 'abstracts/variables';
-@import 'abstracts/mixins';
+@use 'abstracts/variables' as *;
+@use 'abstracts/mixins' as *;
 
-@import 'base/reset';
-@import 'base/typography';
+@use 'base/reset';
+@use 'base/typography';
 
-@import 'layouts/header';
-@import 'layouts/main';
-@import 'layouts/footer';
+@use 'layouts/header';
+@use 'layouts/main';
+@use 'layouts/footer';
 
-@import 'components/buttons';
-@import 'components/logo';
+@use 'components/buttons';
+@use 'components/logo';
