--- a/meet-landing-page/scss/abstracts/_mixins.scss
+++ b/meet-landing-page/scss/abstracts/_mixins.scss
@@ -1,3 +1,5 @@
+@use 'variables' as *;
+
 @mixin respond-to($breakpoint) {
   @if $breakpoint == mobile {
     @media (max-width: $breakpoint-mobile) { @content; }
