--- a/meet-landing-page/scss/base/_typography.scss
+++ b/meet-landing-page/scss/base/_typography.scss
@@ -1,3 +1,6 @@
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+
 // Base typography styles
 body {
   font-family: 'Red Hat Display', sans-serif;
