--- a/meet-landing-page/scss/abstracts/_mixins.scss
+++ b/meet-landing-page/scss/abstracts/_mixins.scss
@@ -27,9 +27,20 @@
 @mixin heading-1 {
   font-family: $font-family-primary;
   font-weight: $font-weight-black;
-  font-size: $font-size-1;
   line-height: $line-height-110;
   letter-spacing: $letter-spacing-0;
+  
+  @include respond-to(desktop) {
+    font-size: $font-size-1; // 64px
+  }
+  
+  @include respond-to(tablet) {
+    font-size: 48px;
+  }
+  
+  @include respond-to(mobile) {
+    font-size: $font-size-2; // 40px
+  }
 }
 
 @mixin heading-2 {
