--- a/meet-landing-page/scss/style.css
+++ b/meet-landing-page/scss/style.css
@@ -202,10 +202,24 @@ h1, h2, h3, h4, h5, h6 {
 .hero__title {
   font-family: "Red Hat Display", sans-serif;
   font-weight: 900;
-  font-size: 64px;
   line-height: 110%;
   letter-spacing: 0px;
   margin-bottom: 24px;
+}
+@media (min-width: 769px) {
+  .hero__title {
+    font-size: 64px;
+  }
+}
+@media (min-width: 376px) and (max-width: 768px) {
+  .hero__title {
+    font-size: 48px;
+  }
+}
+@media (max-width: 375px) {
+  .hero__title {
+    font-size: 40px;
+  }
 }
 .hero__description {
   font-size: 18px;
