--- a/meet-landing-page/scss/layouts/_main.scss
+++ b/meet-landing-page/scss/layouts/_main.scss
@@ -37,18 +37,28 @@
     }
 
     @include respond-to(mobile) {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(2, 1fr);
+      gap: $spacing-100;
       
+      .hero__image--left,
+      .hero__image--right {
+        width: 100%;
+        height: auto;
+      }
+
       .hero__image--left {
+        grid-column: 1;
         grid-row: 1;
       }
 
       .hero__image--right {
-        grid-row: 2;
+        grid-column: 2;
+        grid-row: 1;
       }
 
       .hero__content {
-        grid-row: 3;
+        grid-column: 1 / -1;
+        grid-row: 2;
       }
     }
   }
