--- a/meet-landing-page/scss/style.css
+++ b/meet-landing-page/scss/style.css
@@ -182,16 +182,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 375px) {
   .hero__grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 8px;
+  }
+  .hero__grid .hero__image--left,
+  .hero__grid .hero__image--right {
+    width: 100%;
+    height: auto;
   }
   .hero__grid .hero__image--left {
+    grid-column: 1;
     grid-row: 1;
   }
   .hero__grid .hero__image--right {
-    grid-row: 2;
+    grid-column: 2;
+    grid-row: 1;
   }
   .hero__grid .hero__content {
-    grid-row: 3;
+    grid-column: 1/-1;
+    grid-row: 2;
   }
 }
 .hero__content {
