--- a/meet-landing-page/scss/layouts/_footer.scss
+++ b/meet-landing-page/scss/layouts/_footer.scss
@@ -21,7 +21,9 @@
   &__overlay {
     position: absolute;
     inset: 0;
-    background-color: rgba($color-slate-900, 0.8);
+    background-color: rgba($color-cyan-600, 0.8);
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
   .container {
