Revert "style(footer): 🎨 update footer overlay background color and size"
This reverts commit a8ecd93e05f1a8841a8c38bc4ee413d9ddad63e7.

--- a/meet-landing-page/scss/layouts/_footer.scss
+++ b/meet-landing-page/scss/layouts/_footer.scss
@@ -21,9 +21,7 @@
   &__overlay {
     position: absolute;
     inset: 0;
-    background-color: rgba($color-cyan-600, 0.8);
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: rgba($color-slate-900, 0.8);
   }
 
   .container {
