--- a/meet-landing-page/scss/style.css
+++ b/meet-landing-page/scss/style.css
@@ -378,18 +378,8 @@ h1, h2, h3, h4, h5, h6 {
 .footer {
   position: relative;
   color: #FAFAFA;
-  overflow: visible;
+  overflow: hidden;
 }
-
-.footer .section-separator {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: -84px;
-  z-index: 2;
-  margin: 0;
-}
-
 .footer__background {
   position: absolute;
   inset: 0;
