style(footer): 🎨 adjust z-index for footer and CTA positioning

--- a/meet-landing-page/scss/layouts/_main.scss
+++ b/meet-landing-page/scss/layouts/_main.scss
@@ -182,6 +182,12 @@
   }
 }
 
+.footer-cta {
+  margin-bottom: -92px;
+  position: relative;
+  z-index: 2;
+}
+
 .section-separator {
   position: relative;
   display: flex;
