style(layout): 🎨 update grid layout for mobile responsiveness

--- a/meet-landing-page/scss/layouts/_main.scss
+++ b/meet-landing-page/scss/layouts/_main.scss
@@ -103,7 +103,7 @@
     }
 
     @include respond-to(mobile) {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 
