--- a/meet-landing-page/scss/style.css
+++ b/meet-landing-page/scss/style.css
@@ -272,7 +272,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 375px) {
   .features__grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 .features__content {
