--- a/meet-landing-page/scss/style.css
+++ b/meet-landing-page/scss/style.css
@@ -428,6 +428,14 @@ h1, h2, h3, h4, h5, h6 {
     padding: 48px 24px;
   }
 }
+@media (max-width: 375px) {
+  .footer__grid {
+    grid-template-columns: 1fr;
+    text-align: center;
+    gap: 24px;
+    padding: 48px 24px;
+  }
+}
 .footer__title {
   font-family: "Red Hat Display", sans-serif;
   font-weight: 900;
@@ -440,6 +448,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 24px;
   }
 }
+@media (max-width: 375px) {
+  .footer__title {
+    margin-bottom: 24px;
+  }
+}
 .footer__description {
   font-size: 18px;
 }
@@ -447,6 +460,12 @@ h1, h2, h3, h4, h5, h6 {
   justify-self: end;
 }
 @media (min-width: 376px) and (max-width: 768px) {
+  .footer__cta {
+    justify-self: center;
+    margin-top: 24px;
+  }
+}
+@media (max-width: 375px) {
   .footer__cta {
     justify-self: center;
     margin-top: 24px;
