--- a/meet-landing-page/scss/layouts/_main.scss
+++ b/meet-landing-page/scss/layouts/_main.scss
@@ -22,7 +22,7 @@
     align-items: center;
 
     @media (min-width: $breakpoint-desktop) {
-      grid-template-columns: 1fr minmax(auto, 540px) 1fr;
+      grid-template-columns: 1fr minmax(auto, 448px) 1fr;
       gap: 127px;
 
       .hero__image--left {
@@ -89,8 +89,17 @@
 
   &__content {
     text-align: center;
-    max-width: 540px;
+    max-width: 448px;
     margin: 0 auto;
+
+    @include respond-to(tablet) {
+      max-width: 448px;
+    }
+
+    @include respond-to(mobile) {
+      max-width: 100%;
+      padding: 0 $spacing-200;
+    }
   }
 
   &__title {
