--- a/meet-landing-page/scss/components/_buttons.scss
+++ b/meet-landing-page/scss/components/_buttons.scss
@@ -2,11 +2,11 @@
 @use '../abstracts/mixins' as *;
 
 .button {
-  @include button-base;
-  display: inline-block;
+  @include button-base;  
   font-family: 'Red Hat Display';
-  font-weight: 500; // Medium weight
+  font-weight: 700;
   font-size: 16px;
+  width: 193px;
   padding: 16px 32px;
   border-radius: 24px;
   text-decoration: none;
