--- a/meet-landing-page/scss/layouts/_main.scss
+++ b/meet-landing-page/scss/layouts/_main.scss
@@ -146,6 +146,17 @@
   &__title {
     @include heading-2;
     margin-bottom: $spacing-300;
+    max-width: 82%; // Changed from fixed 445px to percentage
+    margin-left: auto;
+    margin-right: auto;
+
+    @include respond-to(tablet) {
+      max-width: 90%;
+    }
+
+    @include respond-to(mobile) {
+      max-width: 100%;
+    }
   }
 
   &__subtitle {
