--- a/meet-landing-page/scss/style.css
+++ b/meet-landing-page/scss/style.css
@@ -143,7 +143,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .header .container {
-  max-width: 1110px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 16px;
 }
@@ -162,7 +162,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 112px;
 }
 .hero .container {
-  max-width: 1110px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 16px;
 }
@@ -287,7 +287,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 112px;
 }
 .features .container {
-  max-width: 1110px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 16px;
 }
@@ -319,6 +319,19 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 110%;
   letter-spacing: 0px;
   margin-bottom: 24px;
+  max-width: 82%;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 376px) and (max-width: 768px) {
+  .features__title {
+    max-width: 90%;
+  }
+}
+@media (max-width: 375px) {
+  .features__title {
+    max-width: 100%;
+  }
 }
 .features__subtitle {
   display: block;
@@ -439,7 +452,7 @@ h1, h2, h3, h4, h5, h6 {
 .footer .container {
   position: relative;
   z-index: 1;
-  max-width: 1110px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 16px;
 }
@@ -512,10 +525,10 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 24px;
   text-decoration: none;
   transition: background-color 0.3s ease;
-  display: inline-block;
   font-family: "Red Hat Display";
-  font-weight: 500;
+  font-weight: 700;
   font-size: 16px;
+  width: 193px;
   padding: 16px 32px;
   border-radius: 24px;
   text-decoration: none;
