style(footer): 🎨 adjust footer padding for improved layout

--- a/meet-landing-page/scss/layouts/_footer.scss
+++ b/meet-landing-page/scss/layouts/_footer.scss
@@ -34,7 +34,7 @@
     padding: $spacing-800;
 
     @media (min-width: $breakpoint-desktop) {
-      padding: $spacing-1400 $spacing-1000;
+      padding-inline: 0;
     }
   }
 
