--- a/meet-landing-page/scss/style.css
+++ b/meet-landing-page/scss/style.css
@@ -459,7 +459,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (min-width: 1440px) {
   .footer .container {
-    padding: 112px 80px;
+    padding-inline: 0;
   }
 }
 .footer__grid {
